--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
 </head>
 
 <!--- 
-
+Want to run or host yourself? Check out the source? 
+https://github.com/cgolden15/Slope-Game/ 
+Drop a star on the repo if you enjoy.
 --->
 
+<body style="margin: 0; overflow: hidden;">
+    <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        Close this link <a href="https://goldendev.tech/tetris">https://www.youtube.com/watch?v=IO9XlQrEt2Y</a> 
+    </div>
+    <div class="webgl-content">
+        <div id="gameContainer" style="width: 100%; height: 100%; margin: 0;"></div>
+    </div>
+    <script async src="//static.getclicky.com/101357250.js"></script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101357250ns.gif" /></p></noscript>
+</body>
+<!-- Slope game by y8 games, not me.-->
