--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Drop a star on the repo if you enjoy.
 <body style="margin: 0; overflow: hidden;">
     <div class="alert">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-        Close this link <a href="https://goldendev.tech/tetris">https://www.youtube.com/watch?v=IO9XlQrEt2Y</a> 
+        Try Tetris <a href="https://goldendev.tech/tetris">https://www.youtube.com/watch?v=IO9XlQrEt2Y</a> 
     </div>
     <div class="webgl-content">
         <div id="gameContainer" style="width: 100%; height: 100%; margin: 0;"></div>
