--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 </head>
 
 <!--- 
-Want to run or host yourself? Check out the source? 
-https://github.com/cgolden15/Slope-Game/ 
-Drop a star on the repo if you enjoy.
+Credit to y8 games and cgolden15, source.
 --->
 
 <body style="margin: 0; overflow: hidden;">
