--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Credit to y8 games and cgolden15, source.
 <body style="margin: 0; overflow: hidden;">
     <div class="alert">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-        Try Tetris <a href="https://goldendev.tech/tetris">https://www.youtube.com/watch?v=IO9XlQrEt2Y</a> 
+        NO TOUCH CONTROLS CLICK ENTER <a href="https://goldendev.tech/tetris">https://www.youtube.com/watch?v=IO9XlQrEt2Y</a> 
     </div>
     <div class="webgl-content">
         <div id="gameContainer" style="width: 100%; height: 100%; margin: 0;"></div>
